Adapt texts and fix an issue

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -301,20 +301,22 @@
         <div slot="partial-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzprüfungen(i)</b>
+                    <b>Präsenzprüfungen</b>(i)
+                    <b>Zutritt zu offenen Bereichen der TU Graz</b>(i)
                 </div>
                 <div slot="en">
-                    <b>On-site exams(i)</b>
+                    <b>On-site exams</b>(i)
+                    <b>Access to open areas of TU Graz</b>(i)
                 </div>
             </dbp-translated>
         </div>
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzlehrveranstaltungen(i)</b>
+                    <b>Präsenzlehrveranstaltungen</b>(i)
                 </div>
                 <div slot="en">
-                    <b>On-site lectures(i)</b>
+                    <b>On-site lectures</b>(i)
                 </div>
             </dbp-translated>
         </div>
@@ -393,9 +395,11 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     Präsenzprüfungen(i)
+                    Zutritt zu offenen Bereichen der TU Graz(i)
                 </div>
                 <div slot="en">
                     On-site exams(i)
+                    Access to open areas of TU Graz(i)
                 </div>
             </dbp-translated>
         </div>
