Register dbp-info-tooltip globally and use it in the template overrides

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -301,22 +301,22 @@
         <div slot="partial-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzprüfungen</b>(i)
-                    <b>Zutritt zu offenen Bereichen der TU Graz</b>(i)
+                    <b>Präsenzprüfungen</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>Zutritt zu offenen Bereichen der TU Graz</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    <b>On-site exams</b>(i)
-                    <b>Access to open areas of TU Graz</b>(i)
+                    <b>On-site exams</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>Access to open areas of TU Graz</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzlehrveranstaltungen</b>(i)
+                    <b>Präsenzlehrveranstaltungen</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    <b>On-site lectures</b>(i)
+                    <b>On-site lectures</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
@@ -394,22 +394,22 @@
         <div slot="partial-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Präsenzprüfungen(i)
-                    Zutritt zu offenen Bereichen der TU Graz(i)
+                    Präsenzprüfungen<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    Zutritt zu offenen Bereichen der TU Graz<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    On-site exams(i)
-                    Access to open areas of TU Graz(i)
+                    On-site exams<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    Access to open areas of TU Graz<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Präsenzlehrveranstaltungen(i)
+                    Präsenzlehrveranstaltungen<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    On-site lectures(i)
+                    On-site lectures<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
