Add tooltip content

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -301,22 +301,44 @@
         <div slot="partial-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzprüfungen</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
-                    <b>Zutritt zu offenen Bereichen der TU Graz</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>Präsenzprüfungen</b>
+                    <dbp-info-tooltip text-content="1) Prüfungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss<br>
+                        2) Zentrale und dezentrale Prüfungen, die aus Gründen der Qualitätssicherung der Prüfungsergebnisse und / oder zur Überprüfung 
+                        der Lernergebnisse in Präsenz stattfinden<br>3) Masterprüfungen und Rigorosen" interactive>
+                    </dbp-info-tooltip>
+                    <b>Zutritt zu offenen Bereichen der TU Graz</b>
+                    <dbp-info-tooltip text-content="Die Gebäude der TU Graz bleiben geschlossen und sind nur für TU Graz-Mitarbeitende mit TU Graz card 
+                        oder Schlüssel zugänglich. Studierenden ist der Zutritt für die Teilnahme an Präsenzlehr­veranstaltungen und -prüfungen, zur Bibliothek und 
+                        ähnlichem möglich." interactive>
+                    </dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    <b>On-site exams</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
-                    <b>Access to open areas of TU Graz</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>On-site exams</b>
+                    <dbp-info-tooltip text-content="1) Examinations requiring the use of special infrastructure (on site) by students.<br>
+                        2) Centralized and decentralized examinations that take place in presence for reasons of quality assurance of examination results and / or to 
+                        verify learning outcomes.<br>3) Master´s examinations and doctoral examinations" interactive>
+                    </dbp-info-tooltip>
+                    <b>Access to open areas of TU Graz</b>
+                    <dbp-info-tooltip text-content="The buildings of TU Graz remain closed and are only accessible for TU Graz employees with a 
+                        TU Graz card or key. Students are allowed access in order to attend on-site lectures and examinations, the library and the like." interactive>
+                    </dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzlehrveranstaltungen</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>Präsenzlehrveranstaltungen</b>
+                    <dbp-info-tooltip text-content="• Lehrveranstaltungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss.<br>
+                        • Nutzung der Labore durch Studierende, die ihre Master- oder Bachelorarbeiten durchführen, in Absprache mit der*dem Betreuer*in auf Basis eines 
+                            Sicherheits- und Hygienekonzept" interactive>
+                    </dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    <b>On-site lectures</b><dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>On-site lectures</b>
+                    <dbp-info-tooltip text-content="• Lectures where special infrastructure (on site) has to be used by students.<br>• Use of the laboratories by students 
+                        carrying out their Master's or Bachelor's theses in consultation with their supervisors on the basis of a safety and hygiene concept." interactive>
+                    </dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
@@ -392,24 +414,56 @@
             </dbp-translated>
         </div>
         <div slot="partial-validity">
+            <style>
+                dbp-info-tooltip {
+                    color: var(--dbp-text-dark);
+                }
+            </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Präsenzprüfungen<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
-                    Zutritt zu offenen Bereichen der TU Graz<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>Präsenzprüfungen</b>
+                    <dbp-info-tooltip text-content="1) Prüfungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss<br>
+                        2) Zentrale und dezentrale Prüfungen, die aus Gründen der Qualitätssicherung der Prüfungsergebnisse und / oder zur Überprüfung 
+                        der Lernergebnisse in Präsenz stattfinden<br>3) Masterprüfungen und Rigorosen" interactive>
+                    </dbp-info-tooltip>
+                    <b>Zutritt zu offenen Bereichen der TU Graz</b>
+                    <dbp-info-tooltip text-content="Die Gebäude der TU Graz bleiben geschlossen und sind nur für TU Graz-Mitarbeitende mit TU Graz card 
+                        oder Schlüssel zugänglich. Studierenden ist der Zutritt für die Teilnahme an Präsenzlehr­veranstaltungen und -prüfungen, zur Bibliothek und 
+                        ähnlichem möglich." interactive>
+                    </dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    On-site exams<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
-                    Access to open areas of TU Graz<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>On-site exams</b>
+                    <dbp-info-tooltip text-content="1) Examinations requiring the use of special infrastructure (on site) by students.<br>
+                        2) Centralized and decentralized examinations that take place in presence for reasons of quality assurance of examination results and / or to 
+                        verify learning outcomes.<br>3) Master´s examinations and doctoral examinations" interactive>
+                    </dbp-info-tooltip>
+                    <b>Access to open areas of TU Graz</b>
+                    <dbp-info-tooltip text-content="The buildings of TU Graz remain closed and are only accessible for TU Graz employees with a 
+                        TU Graz card or key. Students are allowed access in order to attend on-site lectures and examinations, the library and the like." interactive>
+                    </dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
         <div slot="full-validity">
+            <style>
+                dbp-info-tooltip {
+                    color: var(--dbp-text-dark);
+                }
+            </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Präsenzlehrveranstaltungen<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>Präsenzlehrveranstaltungen</b>
+                    <dbp-info-tooltip text-content="• Lehrveranstaltungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss.<br>
+                        • Nutzung der Labore durch Studierende, die ihre Master- oder Bachelorarbeiten durchführen, in Absprache mit der*dem Betreuer*in auf Basis eines 
+                            Sicherheits- und Hygienekonzepts" interactive>
+                    </dbp-info-tooltip>
                 </div>
                 <div slot="en">
-                    On-site lectures<dbp-info-tooltip text-content="TODO"></dbp-info-tooltip>
+                    <b>On-site lectures</b>
+                    <dbp-info-tooltip text-content="• Lectures where special infrastructure (on site) has to be used by students.<br>• Use of the laboratories by students 
+                        carrying out their Master's or Bachelor's theses in consultation with their supervisors on the basis of a safety and hygiene concept." interactive>
+                    </dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
