--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -299,29 +299,19 @@
             </dbp-translated>
         </div>
         <div slot="partial-validity">
+            <style>
+                .validity-icon {
+                    margin-right: 4px;
+                }
+            </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzprüfungen</b>
-                    <dbp-info-tooltip text-content="1) Prüfungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss<br>
-                        2) Zentrale und dezentrale Prüfungen, die aus Gründen der Qualitätssicherung der Prüfungsergebnisse und / oder zur Überprüfung 
-                        der Lernergebnisse in Präsenz stattfinden<br>3) Masterprüfungen und Rigorosen" interactive>
-                    </dbp-info-tooltip>
-                    <b>Zutritt zu offenen Bereichen der TU Graz</b>
-                    <dbp-info-tooltip text-content="Die Gebäude der TU Graz bleiben geschlossen und sind nur für TU Graz-Mitarbeitende mit TU Graz card 
-                        oder Schlüssel zugänglich. Studierenden ist der Zutritt für die Teilnahme an Präsenzlehr­veranstaltungen und -prüfungen, zur Bibliothek und 
-                        ähnlichem möglich." interactive>
-                    </dbp-info-tooltip>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Präsenzprüfungen</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu offenen Bereichen der TU Graz</b></div>
                 </div>
                 <div slot="en">
-                    <b>On-site exams</b>
-                    <dbp-info-tooltip text-content="1) Examinations requiring the use of special infrastructure (on site) by students.<br>
-                        2) Centralized and decentralized examinations that take place in presence for reasons of quality assurance of examination results and / or to 
-                        verify learning outcomes.<br>3) Master´s examinations and doctoral examinations" interactive>
-                    </dbp-info-tooltip>
-                    <b>Access to open areas of TU Graz</b>
-                    <dbp-info-tooltip text-content="The buildings of TU Graz remain closed and are only accessible for TU Graz employees with a 
-                        TU Graz card or key. Students are allowed access in order to attend on-site lectures and examinations, the library and the like." interactive>
-                    </dbp-info-tooltip>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>On-site exams</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to open areas of TU Graz</b></div>
                 </div>
             </dbp-translated>
         </div>
@@ -329,16 +319,9 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <b>Präsenzlehrveranstaltungen</b>
-                    <dbp-info-tooltip text-content="• Lehrveranstaltungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss.<br>
-                        • Nutzung der Labore durch Studierende, die ihre Master- oder Bachelorarbeiten durchführen, in Absprache mit der*dem Betreuer*in auf Basis eines 
-                            Sicherheits- und Hygienekonzept" interactive>
-                    </dbp-info-tooltip>
                 </div>
                 <div slot="en">
                     <b>On-site lectures</b>
-                    <dbp-info-tooltip text-content="• Lectures where special infrastructure (on site) has to be used by students.<br>• Use of the laboratories by students 
-                        carrying out their Master's or Bachelor's theses in consultation with their supervisors on the basis of a safety and hygiene concept." interactive>
-                    </dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
@@ -415,55 +398,28 @@
         </div>
         <div slot="partial-validity">
             <style>
-                dbp-info-tooltip {
-                    color: var(--dbp-text-dark);
+                .validity-icon {
+                    margin-right: 4px;
                 }
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzprüfungen</b>
-                    <dbp-info-tooltip text-content="1) Prüfungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss<br>
-                        2) Zentrale und dezentrale Prüfungen, die aus Gründen der Qualitätssicherung der Prüfungsergebnisse und / oder zur Überprüfung 
-                        der Lernergebnisse in Präsenz stattfinden<br>3) Masterprüfungen und Rigorosen" interactive>
-                    </dbp-info-tooltip>
-                    <b>Zutritt zu offenen Bereichen der TU Graz</b>
-                    <dbp-info-tooltip text-content="Die Gebäude der TU Graz bleiben geschlossen und sind nur für TU Graz-Mitarbeitende mit TU Graz card 
-                        oder Schlüssel zugänglich. Studierenden ist der Zutritt für die Teilnahme an Präsenzlehr­veranstaltungen und -prüfungen, zur Bibliothek und 
-                        ähnlichem möglich." interactive>
-                    </dbp-info-tooltip>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Präsenzprüfungen</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu offenen Bereichen der TU Graz</b></div>
                 </div>
                 <div slot="en">
-                    <b>On-site exams</b>
-                    <dbp-info-tooltip text-content="1) Examinations requiring the use of special infrastructure (on site) by students.<br>
-                        2) Centralized and decentralized examinations that take place in presence for reasons of quality assurance of examination results and / or to 
-                        verify learning outcomes.<br>3) Master´s examinations and doctoral examinations" interactive>
-                    </dbp-info-tooltip>
-                    <b>Access to open areas of TU Graz</b>
-                    <dbp-info-tooltip text-content="The buildings of TU Graz remain closed and are only accessible for TU Graz employees with a 
-                        TU Graz card or key. Students are allowed access in order to attend on-site lectures and examinations, the library and the like." interactive>
-                    </dbp-info-tooltip>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>On-site exams</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to open areas of TU Graz</b></div>
                 </div>
             </dbp-translated>
         </div>
         <div slot="full-validity">
-            <style>
-                dbp-info-tooltip {
-                    color: var(--dbp-text-dark);
-                }
-            </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <b>Präsenzlehrveranstaltungen</b>
-                    <dbp-info-tooltip text-content="• Lehrveranstaltungen, bei denen von Studierenden spezielle Infrastruktur (vor Ort) genutzt werden muss.<br>
-                        • Nutzung der Labore durch Studierende, die ihre Master- oder Bachelorarbeiten durchführen, in Absprache mit der*dem Betreuer*in auf Basis eines 
-                            Sicherheits- und Hygienekonzepts" interactive>
-                    </dbp-info-tooltip>
                 </div>
                 <div slot="en">
                     <b>On-site lectures</b>
-                    <dbp-info-tooltip text-content="• Lectures where special infrastructure (on site) has to be used by students.<br>• Use of the laboratories by students 
-                        carrying out their Master's or Bachelor's theses in consultation with their supervisors on the basis of a safety and hygiene concept." interactive>
-                    </dbp-info-tooltip>
                 </div>
             </dbp-translated>
         </div>
