Change styling of valid and invalid items

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -318,10 +318,10 @@
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzlehrveranstaltungen</b>
+                    Präsenzlehrveranstaltungen
                 </div>
                 <div slot="en">
-                    <b>On-site lectures</b>
+                    On-site lectures
                 </div>
             </dbp-translated>
         </div>
@@ -400,6 +400,7 @@
             <style>
                 .validity-icon {
                     margin-right: 4px;
+                    color: var(--dbp-success-dark);
                 }
             </style>
             <dbp-translated subscribe="lang">
@@ -416,10 +417,10 @@
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <b>Präsenzlehrveranstaltungen</b>
+                    Präsenzlehrveranstaltungen
                 </div>
                 <div slot="en">
-                    <b>On-site lectures</b>
+                    On-site lectures
                 </div>
             </dbp-translated>
         </div>
