--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -307,11 +307,11 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Präsenzprüfungen</b></div>
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu offenen Bereichen der TU Graz</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu geöffneten Bereichen der TU Graz</b></div>
                 </div>
                 <div slot="en">
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>On-site exams</b></div>
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to open areas of TU Graz</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to opened areas of TU Graz</b></div>
                 </div>
             </dbp-translated>
         </div>
@@ -406,11 +406,11 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Präsenzprüfungen</b></div>
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu offenen Bereichen der TU Graz</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu geöffneten Bereichen der TU Graz</b></div>
                 </div>
                 <div slot="en">
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>On-site exams</b></div>
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to open areas of TU Graz</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to opened areas of TU Graz</b></div>
                 </div>
             </dbp-translated>
         </div>
