Remove margin on body again
while the font size needs to be set on html for rem, margin
affects only the body

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -57,9 +57,12 @@
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
             font-weight: 300;
             font-size: 16px;
-            margin: 0;
             background-color: var(--dbp-override-base-light);
             color: var(--dbp-override-text-dark);
+        }
+
+        body {
+            margin: 0;
         }
 
         /* TU-Graz style override */
