A small font size experiment
Make the font size a bit larger for the mobile breakpoint, so it's easier
to read and buttons are larger.

When things get too small scale the font size with the viewport width
so we end up with 16px again at 320px (our smallest supported target).

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -65,6 +65,18 @@
             margin: 0;
         }
 
+        @media only screen and (max-width: 768px) {
+            html {
+                font-size: 18px;
+            }
+        }
+
+        @media only screen and (max-width: 355px) {
+            html {
+                font-size: 5vw;
+            }
+        }
+
         /* TU-Graz style override */
         html {
              --dbp-override-base-light: #ffffff;
